QtBeef/src/Qt/qaccessible.bf

// --------------------------------------------------------------
// QAccessibleTextInterface
// --------------------------------------------------------------
[CRepr]
struct QAccessibleTextInterface_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
	public void Selection(c_int selectionIndex, c_int* startOffset, c_int* endOffset)
	{
		CQt.QAccessibleTextInterface_Selection((.)this.Ptr, selectionIndex, startOffset, endOffset);
	}
	public c_int SelectionCount()
	{
		return CQt.QAccessibleTextInterface_SelectionCount((.)this.Ptr);
	}
	public void AddSelection(c_int startOffset, c_int endOffset)
	{
		CQt.QAccessibleTextInterface_AddSelection((.)this.Ptr, startOffset, endOffset);
	}
	public void RemoveSelection(c_int selectionIndex)
	{
		CQt.QAccessibleTextInterface_RemoveSelection((.)this.Ptr, selectionIndex);
	}
	public void SetSelection(c_int selectionIndex, c_int startOffset, c_int endOffset)
	{
		CQt.QAccessibleTextInterface_SetSelection((.)this.Ptr, selectionIndex, startOffset, endOffset);
	}
	public c_int CursorPosition()
	{
		return CQt.QAccessibleTextInterface_CursorPosition((.)this.Ptr);
	}
	public void SetCursorPosition(c_int position)
	{
		CQt.QAccessibleTextInterface_SetCursorPosition((.)this.Ptr, position);
	}
	public void Text(String outStr, c_int startOffset, c_int endOffset)
	{
		CQt.QAccessibleTextInterface_Text((.)this.Ptr, startOffset, endOffset);
	}
	public void TextBeforeOffset(String outStr, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset)
	{
		CQt.QAccessibleTextInterface_TextBeforeOffset((.)this.Ptr, offset, boundaryType, startOffset, endOffset);
	}
	public void TextAfterOffset(String outStr, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset)
	{
		CQt.QAccessibleTextInterface_TextAfterOffset((.)this.Ptr, offset, boundaryType, startOffset, endOffset);
	}
	public void TextAtOffset(String outStr, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset)
	{
		CQt.QAccessibleTextInterface_TextAtOffset((.)this.Ptr, offset, boundaryType, startOffset, endOffset);
	}
	public c_int CharacterCount()
	{
		return CQt.QAccessibleTextInterface_CharacterCount((.)this.Ptr);
	}
	public QRect_Ptr CharacterRect(c_int offset)
	{
		return QRect_Ptr(CQt.QAccessibleTextInterface_CharacterRect((.)this.Ptr, offset));
	}
	public c_int OffsetAtPoint(IQPoint point)
	{
		return CQt.QAccessibleTextInterface_OffsetAtPoint((.)this.Ptr, (.)point?.ObjectPtr);
	}
	public void ScrollToSubstring(c_int startIndex, c_int endIndex)
	{
		CQt.QAccessibleTextInterface_ScrollToSubstring((.)this.Ptr, startIndex, endIndex);
	}
	public void Attributes(String outStr, c_int offset, c_int* startOffset, c_int* endOffset)
	{
		CQt.QAccessibleTextInterface_Attributes((.)this.Ptr, offset, startOffset, endOffset);
	}
}
class QAccessibleTextInterface : IQAccessibleTextInterface
{
	private QAccessibleTextInterface_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	static void QtBf_ConnectSignals(Self obj)
	{
		CQt.ObjectHandleMap[obj.ObjectPtr] = obj;
		CQt.QAccessibleTextInterface_OnSelection(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnSelection);
		CQt.QAccessibleTextInterface_OnSelectionCount(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnSelectionCount);
		CQt.QAccessibleTextInterface_OnAddSelection(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnAddSelection);
		CQt.QAccessibleTextInterface_OnRemoveSelection(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnRemoveSelection);
		CQt.QAccessibleTextInterface_OnSetSelection(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnSetSelection);
		CQt.QAccessibleTextInterface_OnCursorPosition(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnCursorPosition);
		CQt.QAccessibleTextInterface_OnSetCursorPosition(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnSetCursorPosition);
		CQt.QAccessibleTextInterface_OnText(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnText);
		CQt.QAccessibleTextInterface_OnTextBeforeOffset(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnTextBeforeOffset);
		CQt.QAccessibleTextInterface_OnTextAfterOffset(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnTextAfterOffset);
		CQt.QAccessibleTextInterface_OnTextAtOffset(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnTextAtOffset);
		CQt.QAccessibleTextInterface_OnCharacterCount(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnCharacterCount);
		CQt.QAccessibleTextInterface_OnCharacterRect(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnCharacterRect);
		CQt.QAccessibleTextInterface_OnOffsetAtPoint(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnOffsetAtPoint);
		CQt.QAccessibleTextInterface_OnScrollToSubstring(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnScrollToSubstring);
		CQt.QAccessibleTextInterface_OnAttributes(obj.ObjectPtr,  => QtBeef_QAccessibleTextInterface_OnAttributes);
	}
	static void QtBeef_QAccessibleTextInterface_OnSelection(void* ptr, c_int selectionIndex, c_int* startOffset, c_int* endOffset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelection(selectionIndex, startOffset, endOffset);
	}
	static void QtBeef_QAccessibleTextInterface_OnSelectionCount(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelectionCount();
	}
	static void QtBeef_QAccessibleTextInterface_OnAddSelection(void* ptr, c_int startOffset, c_int endOffset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnAddSelection(startOffset, endOffset);
	}
	static void QtBeef_QAccessibleTextInterface_OnRemoveSelection(void* ptr, c_int selectionIndex)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRemoveSelection(selectionIndex);
	}
	static void QtBeef_QAccessibleTextInterface_OnSetSelection(void* ptr, c_int selectionIndex, c_int startOffset, c_int endOffset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSetSelection(selectionIndex, startOffset, endOffset);
	}
	static void QtBeef_QAccessibleTextInterface_OnCursorPosition(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnCursorPosition();
	}
	static void QtBeef_QAccessibleTextInterface_OnSetCursorPosition(void* ptr, c_int position)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSetCursorPosition(position);
	}
	static void QtBeef_QAccessibleTextInterface_OnText(void* ptr, c_int startOffset, c_int endOffset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnText(scope .(), startOffset, endOffset);
	}
	static void QtBeef_QAccessibleTextInterface_OnTextBeforeOffset(void* ptr, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnTextBeforeOffset(scope .(), offset, boundaryType, startOffset, endOffset);
	}
	static void QtBeef_QAccessibleTextInterface_OnTextAfterOffset(void* ptr, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnTextAfterOffset(scope .(), offset, boundaryType, startOffset, endOffset);
	}
	static void QtBeef_QAccessibleTextInterface_OnTextAtOffset(void* ptr, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnTextAtOffset(scope .(), offset, boundaryType, startOffset, endOffset);
	}
	static void QtBeef_QAccessibleTextInterface_OnCharacterCount(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnCharacterCount();
	}
	static void QtBeef_QAccessibleTextInterface_OnCharacterRect(void* ptr, c_int offset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnCharacterRect(offset);
	}
	static void QtBeef_QAccessibleTextInterface_OnOffsetAtPoint(void* ptr, void** point)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnOffsetAtPoint(point);
	}
	static void QtBeef_QAccessibleTextInterface_OnScrollToSubstring(void* ptr, c_int startIndex, c_int endIndex)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnScrollToSubstring(startIndex, endIndex);
	}
	static void QtBeef_QAccessibleTextInterface_OnAttributes(void* ptr, c_int offset, c_int* startOffset, c_int* endOffset)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnAttributes(scope .(), offset, startOffset, endOffset);
	}
	public this(QAccessibleTextInterface_Ptr ptr)
	{
		this.ptr = ptr;
		QtBf_ConnectSignals(this);
	}
	public ~this()
	{
		CQt.QAccessibleTextInterface_Delete(this.ptr);
	}
	public  virtual void OnSelection(c_int selectionIndex, c_int* startOffset, c_int* endOffset)
	{
	}
	public  virtual c_int OnSelectionCount()
	{
		return default;
	}
	public  virtual void OnAddSelection(c_int startOffset, c_int endOffset)
	{
	}
	public  virtual void OnRemoveSelection(c_int selectionIndex)
	{
	}
	public  virtual void OnSetSelection(c_int selectionIndex, c_int startOffset, c_int endOffset)
	{
	}
	public  virtual c_int OnCursorPosition()
	{
		return default;
	}
	public  virtual void OnSetCursorPosition(c_int position)
	{
	}
	public  virtual void OnText(String outStr, c_int startOffset, c_int endOffset)
	{
	}
	public  virtual void OnTextBeforeOffset(String outStr, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset)
	{
	}
	public  virtual void OnTextAfterOffset(String outStr, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset)
	{
	}
	public  virtual void OnTextAtOffset(String outStr, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset)
	{
	}
	public  virtual c_int OnCharacterCount()
	{
		return default;
	}
	public  virtual QRect_Ptr OnCharacterRect(c_int offset)
	{
		return default;
	}
	public  virtual c_int OnOffsetAtPoint(void** point)
	{
		return default;
	}
	public  virtual void OnScrollToSubstring(c_int startIndex, c_int endIndex)
	{
	}
	public  virtual void OnAttributes(String outStr, c_int offset, c_int* startOffset, c_int* endOffset)
	{
	}
}
interface IQAccessibleTextInterface : IQtObjectInterface
{
}
extension CQt
{
	[LinkName("QAccessibleTextInterface_Delete")]
	public static extern void QAccessibleTextInterface_Delete(QAccessibleTextInterface_Ptr self);
	[LinkName("QAccessibleTextInterface_Selection")]
	public static extern void QAccessibleTextInterface_Selection(void* self, c_int selectionIndex, c_int* startOffset, c_int* endOffset);
	
	public function void QAccessibleTextInterface_OnSelection_action(void* self, c_int selectionIndex, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_OnSelection")]
	public static extern void QAccessibleTextInterface_OnSelection(void* self, QAccessibleTextInterface_OnSelection_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperSelection")]
	public static extern void QAccessibleTextInterface_SuperSelection(void* self, c_int selectionIndex, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_SelectionCount")]
	public static extern c_int QAccessibleTextInterface_SelectionCount(void* self);
	
	public function void QAccessibleTextInterface_OnSelectionCount_action(void* self);
	[LinkName("QAccessibleTextInterface_OnSelectionCount")]
	public static extern c_int QAccessibleTextInterface_OnSelectionCount(void* self, QAccessibleTextInterface_OnSelectionCount_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperSelectionCount")]
	public static extern c_int QAccessibleTextInterface_SuperSelectionCount(void* self);
	[LinkName("QAccessibleTextInterface_AddSelection")]
	public static extern void QAccessibleTextInterface_AddSelection(void* self, c_int startOffset, c_int endOffset);
